@@ -1,3 +1,8 @@
+2002-04-24  Chris G. Demetriou  <cgd@broadcom.com>
+
+	* config/tc-mips.c (macro_build): Do _not_ allow MIPS-3D
+	instructions to be generated by macros.
+
 2002-04-24  Andreas Schwab  <schwab@suse.de>
 
 	* config/tc-i386.c (output_jump, output_disp)
